# verified-capsules

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: gromacs-rmsd-example.yml  gromacs-rmsd-smoke.yml  mdanalysis-rmsd-example.yml  validate.yml
docs/: agent-integration.md  check-before-run-record-after-run.md  hpc-slurm-notes.md  known-failures.md  overview.md  product-quickstart.md  readiness-levels.md  release-checklist.md  safety-model.md  standards-crosswalk.md  trajectory-to-skill.md  v0.1-alpha-boundary.md  verified-execution-capsule.md
opensciflow_capsule/: __init__.py  catalog.py  cli.py  smoke.py  summary.py  validation.py
schemas/: capsule.schema.json  command-template.schema.json  environment-spec.schema.json  known-failure.schema.json  manifest.schema.json  run-record.schema.json  smoke-test.schema.json  verified-envs.schema.json
scripts/: opensciflow_capsule.py  opensciflow_capsule_cli.py  run_smoke_test.py  summarize_verified_envs.py  validate_capsule.py  validate_manifest.py  validate_run_record.py
tests/: test_cli.py
verified-capsules/gromacs-rmsd/: apptainer.def  environment.yml  known-failures.md  opensciflow.yaml  smoke-test.sh  verified-envs.yaml
verified-capsules/gromacs-rmsd/expected-outputs/: README.md
verified-capsules/gromacs-rmsd/run-records/: README.md  blocked-local-windows-no-gmx.json
verified-capsules/gromacs-rmsd/scripts/: run_gromacs_rmsd.py
verified-capsules/mdanalysis-rmsd/: README.md  environment.yml  known-failures.md  opensciflow.yaml  verified-envs.yaml
(+8 files in other folders)
